New tool added, Wfuzz

--- a/docker-image/Dockerfile
+++ b/docker-image/Dockerfile
@@ -1,12 +1,15 @@
 
 ARG VERSION
-FROM bitnami/python:latest as builder
+FROM bitnami/python:latest
 MAINTAINER Leopoldo Angulo "leopol.angul0@gmail.com"
 LABEL Name=PSAK Version=1.0.0
 
 RUN apt-get update && \
-	apt-get install -y nmap gnupg iputils-ping john tcpdump
-
+	apt-get install -y nmap gnupg iputils-ping john tcpdump libcurl4-openssl-dev 
+RUN git clone https://github.com/xmendez/wfuzz.git && \
+	cd wfuzz && \
+	python3 setup.py install
+	
 RUN git clone https://github.com/commixproject/commix.git commix && \
 	cd commix &&  \
 	python3 commix.py --install
@@ -27,10 +30,10 @@ RUN ["/others.sh"]
 RUN ["/nikto.sh"]
 
 RUN apt-get upgrade -y && \
-    rm -r /var/lib/apt/lists /var/cache/apt/archives
+    rm -r /var/lib/apt/lists /var/cache/apt/archives /app/wfuzz
 
 COPY rootfs /
 RUN ["/postunpack.sh"]
 
-USER nonroot
+USER psak
 ENTRYPOINT ["/entrypoint.sh"] 
